play around with some useful extensions

--- a/content/2014/06/22.md
+++ b/content/2014/06/22.md
@@ -2,7 +2,6 @@ Title: pelican でブログを作る
 Date: 2014-06-22 21:00
 Category: Python
 Slug: my-blog-post-using-pelican
-Tags: pelican, publishing
 Author: ssirai
 
 pelican でブログ作っているので手短にやったことを書く。このポスト自体が pelican のテストなのであまりちゃんと解説書く気ないですスイマセン。
@@ -79,4 +78,56 @@ pelican dezuo ruburogu とは一体…
 ARTICLE_URL     = 'posts/{date:%Y}/{date:%m}/{date:%d}/{slug}/'
 ARTICLE_SAVE_AS = 'posts/{date:%Y}/{date:%m}/{date:%d}/{slug}/index.html'
 ```
+
+## liquid tag による IPython Notebook の挿入
+
+まず数式が使えないので `pelican-plugins` から `latex` パッケージを入れておく。これは `mathjax` の別名。
+
+```bash
+$ git clone https://github.com/getpelican/pelican-plugins
+```
+
+conf ファイルに以下を記述する（pelican から実行できれば名前は何でもいいっぽい？ `pelican-quickstart` から作った場合デフォルトは `pelicanconf.py` と `publishconf.py` のどちらか）。
+
+```python
+PLUGIN_PATH = '/path/to/pelican-plugins'
+PLUGINS = ['liquid_tags.notebook', 'latex']
+```
+
+`/path/to/` は絶対パスで。`~` をなんとなしに使ったらダメだった。そりゃそうか。
+
+数式はこれだけの設定でよい。`liquid_tags.notebook` というプラグインで IPython Notebook を記事の好きな場所に挟み込むことができるようになる。
+
+```
+{% notebook filename.ipynb %}
+```
+
+注意点は notebook を置く場所である。デフォルトでは `content/` 以下に `notebooks/` というフォルダを作ってそこに `filename.ipynb` を置く必要がある。そういう規約である。`NOTEBOOK_DIR` を変えればデフォルトの設定は変更できるが特に不満はないしそのままにしておく。
+
+最後のステップとして `_nb_header.html` の設定をする必要がある。`_nb_header.html` は `liquid_tags.notebook` を使っているとpelican プロジェクトのルートフォルダに自動で生成される。これを挿入すると notebook の表示が奇麗になる。
+
+まず `theme` の `template` に次のような文を書く。
+
+```
+{% if EXTRA_HEADER %}
+{{ EXTRA_HEADER }}
+{% endif %}
+```
+
+が、自分は `pelipress` テーマを使っておりそこには既に書かれていたので必要なかった。
+
+conf に `_nb_header.html` を読みこむ設定を書く。
+
+```python
+EXTRA_HEADER = open('_nb_header.html').read().decode('utf-8')
+```
+
+これにて準備は完成！
+
+以前作ったノートを挟んでおく。
+
+`IJulia` なのだが構文がカラーリングされておりませんな。
+
+{% notebook random_search.ipynb %}
+
 
